tests/unit-fail/j087b.ref
Error: UB-STDARG1
Description: stdarg.h functions used in function with fixed args.
Type: Undefined behavior.
See also: C11 sec. 6.9.1:8, J.2:1 item 87
  at __va_inc(j087b.c:5)
  at f(j087b.c:5)
  at main(j087b.c:9)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
